--- a/src/styles/_board.scss
+++ b/src/styles/_board.scss
@@ -1,19 +1,59 @@
-.table-container {
+.board-container {
   border-radius: 10px;
-  overflow: hidden;
   background-color: #FFFFFF;
   margin: 20px auto 20px auto;
-  height: 620px;
+  height: 720px;
   width: 928px;
   max-width: 100%;
-  font-family: Open Sans, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 28px;
   display: flex;
-  align-items: center;
-  text-align: center;
   color: #9E9E9E;
-  flex-direction: column;
+
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  .element {
+    width: calc(100% / 7);
+    border: 1px solid #9E9E9E;
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    position: relative;
+
+    &.active {
+      &:hover {
+        cursor: unset;
+      }
+    }
+
+    &.active-player {
+      &:before {
+        background-color: crimson;
+      }
+    }
+
+    &.active-ai {
+      &:before {
+        background-color: darkslateblue;
+      }
+    }
+
+    &.active-player, &.active-ai {
+      &:before {
+        content: " ";
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        left: 0;
+        top: 0;
+        border-radius: 50%;
+      }
+
+      &:hover {
+        cursor: unset;
+      }
+    }
+  }
 }
