--- a/src/styles/_board.scss
+++ b/src/styles/_board.scss
@@ -1,6 +1,6 @@
 .board-container {
   border-radius: 10px;
-  background-color: #FFFFFF;
+  background-color: black;
   margin: 20px auto 20px auto;
   height: 720px;
   width: 928px;
