--- a/src/styles/_ui.scss
+++ b/src/styles/_ui.scss
@@ -1,6 +1,6 @@
 .ui-container {
   border-radius: 10px;
-  background-color: #FFFFFF;
+  background-color: black;
   margin: 20px auto 20px auto;
   width: 928px;
   max-width: 100%;
