--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
   font-family: "Open Sans", sans-serif;
 
   body {
-    background-color: #F5F5F5 !important;
+    background-color: grey !important;
   }
 }
 
