--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,10 +2,10 @@
   font-family: "Open Sans", sans-serif;
 
   body {
+    //background-color: #F5f5f5 !important;
     background-color: grey !important;
   }
 }
 
 @import "board";
 @import "ui";
-
